----------------------- 3.7.181 Release [6-August-2018] -----------------------

6-August-2018
  + minify.js (build 181)
  # encoding (build 181)

--------------------- 3.7.179 Release [26-September-2017] ---------------------

26-September-2017
  # export (build 179)

22-September-2017
  # backward compatibility (build 178)

15-September-2017
  # upload file via URL (build 177)

17-August-2017
  ^ ajax disable by default (build 176)

31-July-2017
  ^ importer (build 175)

20-June-2017
  # minor bugs fix (build 174)

----------------------- 3.7.173 Release  [19-June-2017] -----------------------

19-July-2017
  + version compare (build 173)

15-June-2017
  + fields (build 172)

26-April-2017
  # minor bugs (build 171)
  # JError deprecated (build 170)
  # JRequest deprecated (build 169)

----------------------- 3.6.168 Release [25-April-2017] -----------------------

25-April-2017
  # upload file (build 168)

3-March-2017
  # cpanel.json (build 167)

2-February-2017
  # websites view (build 166)

28-January-2017
  + export modules (build 165)
  + export menus (build 164)

25-January-2017
  + link source file (build 163)
  + backlink (build 163)
  + filename (build 163)

13-January-2017
  + export contacts (build 161)
  + ajax (build 160)
  - 2.5 compatibility (build 160)
  + import Ajax (build 159, 162)
  + PHP Console (build 158)
  + OAuth2 (build 158)

---------------------- 3.6.157 Release [31-October-2016] ----------------------

31-October-2016
  ^ debug (build 157)
  ^ utf8_encode (build 156)

---------------------- 3.3.155 Release [17-October-2016] ----------------------

17-October-2016
  ^ purify xml (build 155)

--------------------- 3.3.154 Release [19-September-2016] ---------------------

19-September-2016
  # messages (build 154)

------------------------ 3.3.153 Release [31-May-2016] ------------------------

31-May-2016
  # log (build 153)

------------------------ 3.3.152 Release [26-May-2016] ------------------------

26-May-2016