@@ -7,7 +7,7 @@
   <authorUrl>www.eshiol.it</authorUrl>
   <copyright>(C) 2010, 2018 Helios Ciancio. All rights reserved.</copyright>
   <license>GNU/GPL v3</license>
-  <version>3.7.181.423</version>
+  <version>3.7.182.430</version>
   <description>COM_J2XML_XML_DESCRIPTION</description>
   <scriptfile>script.php</scriptfile>
   <install>
