@@ -1,8 +1,13 @@
+---------------------- 18.8.32 Release  [14-August-2018] ----------------------
+
+14-August-2018
+  + XmlrpcLogger (build 32)
+
 ----------------------- 18.8.31 Release [6-August-2018] -----------------------
 
 6-August-2018
   + minify.js (build 31)
-  
+
 ----------------------- 18.4.30 Release  [3-April-2018] -----------------------
 
 3-April-2018
