@@ -1,3 +1,8 @@
+---------------------- 3.7.182 Release  [14-August-2018] ----------------------
+
+14-August-2018
+  - XmlrpcLogger (build 182)
+
 ----------------------- 3.7.181 Release [6-August-2018] -----------------------
 
 6-August-2018
